<resources>
    <string name="app_name">ContractorBOT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Connect</string>
    <string name="title_material_list">Matériels</string>
    <string name="ble_not_supported">Bluetooth 4.0 (BLE) n\'est pas supporté votre appareil. Rendez-vous sur le lien suivant pour télécharger une application permettant la connection bluetooth 4.0 : http://wiki.sunfounder.cc/images/6/6b/BleSerialPort.zip</string>
    <string name="BT_Not_Enabled">Bluetooth isn\'t enabled. Please Enable Bluetooth to connect on the ContractorBot.</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_find_btdevice">Test Bluetooth</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="send_button_go">Send</string>
    <string name="send_button_message">Vas-y petit robot!</string>
    <string name="button_back">Back</string>
    <string name="title_activity_edit_surface">Choix des matériaux</string>

    <!-- content_edit_surface.xml -->
    <string name="txt_Wall1">Mur 1</string>
    <string name="txt_Wall2">Mur 2</string>
    <string name="txt_Wall3">Mur 3</string>
    <string name="txt_Wall4">Mur 4</string>
    <string name="txt_Floor">Plancher</string>
    <string name="txt_Ceiling">Plafond</string>
    <string name="btn_Select">Choisir</string>

    <!-- activity_edit_surface.xml -->
    <string name="btn_GenerateBOM">Générer BOM</string>

    <!-- EditSurfaceActivity -->


    <!-- ChooseMaterialActivity -->
    <string name="errorNoMaterialSelected">Vous devez sélectionner au moins un matériau pour votre surface.</string>
    <string name="title_activity_generate_bom">GenerateBOMActivity</string>

    <!-- BOM layout -->
    <string name="tvBOM">B.O.M.</string>
</resources>
