<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditSurfaceActivity"
    tools:showIn="@layout/activity_edit_surface">

    <TextView
        android:id="@+id/txt_CeilingArea"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Ceiling"
        app:layout_constraintStart_toEndOf="@+id/txt_Ceiling"
        app:layout_constraintTop_toBottomOf="@+id/txt_FloorArea" />

    <TextView
        android:id="@+id/txt_Ceiling"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_Ceiling"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_CeilingArea"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Floor" />

    <Button
        android:id="@+id/btn_Ceiling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_Select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Floor" />

    <TextView
        android:id="@+id/txt_FloorArea"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Floor"
        app:layout_constraintTop_toBottomOf="@+id/txt_Wall4Area" />

    <TextView
        android:id="@+id/txt_Floor"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_Floor"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_FloorArea"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Wall4" />

    <Button
        android:id="@+id/btn_Floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_Select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Wall4" />

    <TextView
        android:id="@+id/txt_Wall4Area"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Wall4"
        app:layout_constraintTop_toBottomOf="@+id/txt_Wall3Area" />

    <TextView
        android:id="@+id/txt_Wall4"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_Wall4"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_Wall4Area"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Wall3" />

    <Button
        android:id="@+id/btn_Wall4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_Select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Wall3" />

    <TextView
        android:id="@+id/txt_Wall2Area"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Wall2"
        app:layout_constraintTop_toBottomOf="@+id/txt_Wall1Area" />

    <TextView
        android:id="@+id/txt_Wall2"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_Wall2"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_Wall2Area"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Wall1" />

    <Button
        android:id="@+id/btn_Wall2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_Select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Wall1" />

    <TextView
        android:id="@+id/txt_Wall3"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_Wall3"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_Wall3Area"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Wall2" />

    <TextView
        android:id="@+id/txt_Wall3Area"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Wall3"
        app:layout_constraintTop_toBottomOf="@+id/txt_Wall2Area" />

    <Button
        android:id="@+id/btn_Wall3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_Select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Wall2" />

    <TextView
        android:id="@+id/txt_Wall1"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_Wall1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_Wall1Area"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Wall1"
        app:layout_constraintStart_toEndOf="@+id/txt_Wall1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Wall1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_Select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>